--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ packaging==24.1
 pillow==10.3.0
 protobuf==3.20.3
 pycparser==2.22
+pynput==1.7.7
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 scipy==1.10.1
