--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ pycparser==2.22
 pynput==1.7.7
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
+PyYAML==6.0.2
 scipy==1.10.1
 six==1.16.0
 sounddevice==0.4.7
