--- a/settings/default.settings.yaml
+++ b/settings/default.settings.yaml
@@ -3,11 +3,11 @@ settings:
   
   mp:
     pose:
-      static_image_mode: false
+      static_image_mode: False
       model_complexity: 1
-      smooth_landmarks: true
-      enable_segmentation: false
-      smooth_segmentation: true
+      smooth_landmarks: True
+      enable_segmentation: False
+      smooth_segmentation: True
       min_detection_confidence: 0.5
       min_tracking_confidence: 0.5
     hands:
