--- a/settings/default.settings.yaml
+++ b/settings/default.settings.yaml
@@ -1,6 +1,7 @@
 settings:
-  mainRunner: "debug" # unity, debug, debug_quizz
-  
+  main_runner: "debug" # unity, debug, debug_quizz
+  debug_organ: "brain" # heart, brain, liver, stomach, intestine
+
   mp:
     pose:
       static_image_mode: False
