--- a/settings/default.settings.yaml
+++ b/settings/default.settings.yaml
@@ -1,8 +1,8 @@
 settings:
-  main_runner: "debug" # unity, debug, debug_quizz
-  debug_organ: "brain" # heart, brain, liver, stomach, intestine
+  main_runner: "unity" # unity, debug, debug_quizz
+  debug_organ: "body" # heart, brain, liver, stomach, intestine, body
 
-  adjust_orientation: False # If main runner is unity => True if mobile device used and False when using webcam
+  adjust_orientation: True # If main runner is unity => True if mobile device used and False when using webcam
   enable_adjustments_settings: False # True or False
 
   mp:
@@ -20,63 +20,56 @@ settings:
       min_detection_confidence: 0.5
       min_tracking_confidence: 0.5
 
-  position:
-    heart:
-      command:
-        x_offset: 0
-        y_offset: -200
-        z_offset: 0
-      unity:
-        x_offset: 0
-        y_offset: -1.5
-        z_offset: 15 
+  pose_landmarks:
+    [
+      "NOSE",
+      "LEFT_EYE_INNER",
+      "LEFT_EYE",
+      "LEFT_EYE_OUTER",
+      "RIGHT_EYE_INNER",
+      "RIGHT_EYE",
+      "RIGHT_EYE_OUTER",
+      "LEFT_EAR",
+      "RIGHT_EAR",
+      "MOUTH_LEFT",
+      "MOUTH_RIGHT",
+      "LEFT_SHOULDER",
+      "RIGHT_SHOULDER",
+      "LEFT_ELBOW",
+      "RIGHT_ELBOW",
+      "LEFT_WRIST",
+      "RIGHT_WRIST",
+      "LEFT_PINKY",
+      "RIGHT_PINKY",
+      "LEFT_INDEX",
+      "RIGHT_INDEX",
+      "LEFT_THUMB",
+      "RIGHT_THUMB",
+      "LEFT_HIP",
+      "RIGHT_HIP",
+      "LEFT_KNEE",
+      "RIGHT_KNEE",
+      "LEFT_ANKLE",
+      "RIGHT_ANKLE",
+      "LEFT_HEEL",
+      "RIGHT_HEEL",
+      "LEFT_FOOT_INDEX",
+      "RIGHT_FOOT_INDEX",
+    ]
 
-    brain:
-      command:
-        x_offset: 0
-        y_offset: -50
-        z_offset: 0
-      unity:
-        x_offset: 0
-        y_offset: 1.2
-        z_offset: 4
-
-    liver:
-      command:
-        x_offset: -35
-        y_offset: -150
-        z_offset: 0
-      unity:
-        x_offset: -0.8
-        y_offset: -2
-        z_offset: 4
-
-    stomach:
-      command:
-        x_offset: 30
-        y_offset: -145
-        z_offset: 0
-      unity:
-        x_offset: 0.85
-        y_offset: -2.5
-        z_offset: 4
-
-    intestine:
-      command:
-        x_offset: 0
-        y_offset: -100
-        z_offset: 0
-      unity:
-        x_offset: 0
-        y_offset: -2.8
-        z_offset: 4
-
-    body:
-      command:
-        x_offset: 0
-        y_offset: 0
-        z_offset: 0
-      unity:
-        x_offset: 0
-        y_offset: 0
-        z_offset: 0
+  selected_marks:
+    body: [0, 12, 14, 16, 11, 13, 15, 20, 28, 25, 27]
+    body_v2:
+      [
+        "NOSE",
+        "LEFT_SHOULDER",
+        "LEFT_ELBOW",
+        "LEFT_WRIST",
+        "RIGHT_SHOULDER",
+        "RIGHT_ELBOW",
+        "RIGHT_WRIST",
+        "LEFT_INDEX",
+        "LEFT_ANKLE",
+        "RIGHT_HIP",
+        "RIGHT_KNEE",
+      ]
