--- a/settings/default.settings.yaml
+++ b/settings/default.settings.yaml
@@ -4,6 +4,7 @@ settings:
 
   adjust_orientation: True # If main runner is unity => True if mobile device used and False when using webcam
   enable_adjustments_settings: False # True or False
+  override_typ_selected: True # Override the selected organ in unity if debug mode on
 
   mp:
     pose:
