--- a/settings/offset.settings.yaml
+++ b/settings/offset.settings.yaml
@@ -16,171 +16,37 @@ settings:
     # #
     # # 4:3  probably webcam for debug ====================================================================================================
     # 4_by_3:
-    #   heart:
-    #     common:
-    #       x_offset: 0
-    #       y_offset: -175
-    #       z_offset: 4
-    #     unity:
-    #       x_offset: 0
-    #       y_offset: -1.5
-    #       z_offset: 22
-    #     calibration:
-    #       minimum: 10.20
-    #       maximum: 19.80
-    #       y_offset:
-    #         enable: True
-    #         operator: "subtraction"
-    #         common: 15
-    #         unity: 0.15
-    #       x_offset:
-    #         enable: False
-    #         operator: "subtraction"
-    #         common: 0
-    #         unity: 0
-    #       z_offset:
-    #         enable: True
-    #         operator: "subtraction"
-    #         common: 0
-    #         unity: 0.75
-    #   brain:
-    #     common:
-    #       x_offset: 0
-    #       y_offset: 1.2
-    #       z_offset: 4
-    #     unity:
-    #       x_offset: 0
-    #       y_offset: 1.2
-    #       z_offset: 4
-    #     calibration:
-    #       minimum: 10.20
-    #       maximum: 19.80
-    #       y_offset:
-    #         enable: False
-    #         operator: "subtraction"
-    #         common: 0
-    #         unity: 0
-    #       x_offset:
-    #         enable: False
-    #         operator: "subtraction"
-    #         common: 0
-    #         unity: 0
-    #       z_offset:
-    #         enable: True
-    #         operator: "subtraction"
-    #         common: 0
-    #         unity: 0.75
-    #   liver:
-    #     common:
-    #       x_offset: -0.8
-    #       y_offset: -2
-    #       z_offset: 4
-    #     unity:
-    #       x_offset: -0.8
-    #       y_offset: -2
-    #       z_offset: 4
-    #     calibration:
-    #       minimum: 10.20
-    #       maximum: 19.80
-    #       y_offset:
-    #         enable: False
-    #         operator: "subtraction"
-    #         common: 0
-    #         unity: 0
-    #       x_offset:
-    #         enable: False
-    #         operator: "subtraction"
-    #         common: 0
-    #         unity: 0
-    #       z_offset:
-    #         enable: True
-    #         operator: "subtraction"
-    #         common: 0
-    #         unity: 0.75
-    #   stomach:
-    #     common:
-    #       x_offset: 0.85
-    #       y_offset: -2.5
-    #       z_offset: 4
-    #     unity:
-    #       x_offset: 0.85
-    #       y_offset: -2.5
-    #       z_offset: 4
-    #     calibration:
-    #       minimum: 10.20
-    #       maximum: 19.80
-    #       y_offset:
-    #         enable: False
-    #         operator: "subtraction"
-    #         common: 0
-    #         unity: 0
-    #       x_offset:
-    #         enable: False
-    #         operator: "subtraction"
-    #         common: 0
-    #         unity: 0
-    #       z_offset:
-    #         enable: True
-    #         operator: "subtraction"
-    #         common: 0
-    #         unity: 0.75
-    #   intestine:
-    #     common:
-    #       x_offset: 0
-    #       y_offset: -2.8
-    #       z_offset: 4
-    #     unity:
-    #       x_offset: 0
-    #       y_offset: -2.8
-    #       z_offset: 4
-    #     calibration:
-    #       minimum: 10.20
-    #       maximum: 19.80
-    #       y_offset:
-    #         enable: False
-    #         operator: "subtraction"
-    #         common: 0
-    #         unity: 0
-    #       x_offset:
-    #         enable: False
-    #         operator: "subtraction"
-    #         common: 0
-    #         unity: 0
-    #       z_offset:
-    #         enable: True
-    #         operator: "subtraction"
-    #         common: 0
-    #         unity: 0.75
-    #   body:
-    #     common:
-    #       x_offset: 0
-    #       y_offset: 0
-    #       z_offset: 0
-    #     unity:
-    #       x_offset: 0
-    #       y_offset: 0
-    #       z_offset: 4
-    #     calibration:
-    #       minimum: 10.20
-    #       maximum: 19.80
-    #       y_offset:
-    #         enable: False
-    #         operator: "subtraction"
-    #         common: 0
-    #         unity: 0
-    #       x_offset:
-    #         enable: False
-    #         operator: "subtraction"
-    #         common: 0
-    #         unity: 0
-    #       z_offset:
-    #         enable: True
-    #         operator: "subtraction"
-    #         common: 0
-    #         unity: 0.75
 
     # 16:9 ====================================================================================================
     16_by_9:
+      brain:
+        common:
+          x_offset: 0
+          y_offset: -20
+          z_offset: 4
+        unity:
+          x_offset: 0
+          y_offset: -0.065
+          z_offset: 20
+        calibration:
+          minimum: 10.20
+          maximum: 19.80
+          y_offset:
+            enable: True
+            operator: "subtraction"
+            common: 5.5
+            unity: 0.15
+          x_offset:
+            enable: False
+            operator: "subtraction"
+            common: 0
+            unity: 0
+          z_offset:
+            enable: True
+            operator: "subtraction"
+            common: 0
+            unity: 0.75
+
       heart:
         common:
           x_offset: 0
@@ -209,14 +75,14 @@ settings:
             common: 0
             unity: 0.75
 
-      brain:
+      lungs:
         common:
           x_offset: 0
-          y_offset: -20
+          y_offset: -175
           z_offset: 4
         unity:
           x_offset: 0
-          y_offset: -0.065
+          y_offset: -1.5
           z_offset: 20
         calibration:
           minimum: 10.20
@@ -224,7 +90,7 @@ settings:
           y_offset:
             enable: True
             operator: "subtraction"
-            common: 5.5
+            common: 15
             unity: 0.15
           x_offset:
             enable: False
@@ -353,372 +219,18 @@ settings:
 
     # # 18:9 ====================================================================================================
     # 18_by_9:
-    #   heart:
-    #     common:
-    #       x_offset: 0
-    #       y_offset: -1.5
-    #       z_offset: 15
-    #     unity:
-    #       x_offset: 0
-    #       y_offset: -1.5
-    #       z_offset: 15
-
-    #   brain:
-    #     common:
-    #       x_offset: 0
-    #       y_offset: 1.2
-    #       z_offset: 4
-    #     unity:
-    #       x_offset: 0
-    #       y_offset: 1.2
-    #       z_offset: 4
-
-    #   liver:
-    #     common:
-    #       x_offset: -0.8
-    #       y_offset: -2
-    #       z_offset: 4
-    #     unity:
-    #       x_offset: -0.8
-    #       y_offset: -2
-    #       z_offset: 4
-
-    #   stomach:
-    #     common:
-    #       x_offset: 0.85
-    #       y_offset: -2.5
-    #       z_offset: 4
-    #     unity:
-    #       x_offset: 0.85
-    #       y_offset: -2.5
-    #       z_offset: 4
-
-    #   intestine:
-    #     common:
-    #       x_offset: 0
-    #       y_offset: -2.8
-    #       z_offset: 4
-    #     unity:
-    #       x_offset: 0
-    #       y_offset: -2.8
-    #       z_offset: 4
-
-    #   body:
-    #     common:
-    #       x_offset: 0
-    #       y_offset: 0
-    #       z_offset: 0
-    #     unity:
-    #       x_offset: 0
-    #       y_offset: 0
-    #       z_offset: 4
 
     # # 19:9 ====================================================================================================
     # 19_by_9:
-    #   heart:
-    #     common:
-    #       x_offset: 0
-    #       y_offset: -200
-    #       z_offset: 0
-    #     unity:
-    #       x_offset: 0
-    #       y_offset: -1.5
-    #       z_offset: 15
-
-    #   brain:
-    #     common:
-    #       x_offset: 0
-    #       y_offset: -50
-    #       z_offset: 0
-    #     unity:
-    #       x_offset: 0
-    #       y_offset: 1.2
-    #       z_offset: 4
-
-    #   liver:
-    #     common:
-    #       x_offset: -35
-    #       y_offset: -150
-    #       z_offset: 0
-    #     unity:
-    #       x_offset: -0.8
-    #       y_offset: -2
-    #       z_offset: 4
-
-    #   stomach:
-    #     common:
-    #       x_offset: 30
-    #       y_offset: -145
-    #       z_offset: 0
-    #     unity:
-    #       x_offset: 0.85
-    #       y_offset: -2.5
-    #       z_offset: 4
-
-    #   intestine:
-    #     common:
-    #       x_offset: 0
-    #       y_offset: -100
-    #       z_offset: 0
-    #     unity:
-    #       x_offset: 0
-    #       y_offset: -2.8
-    #       z_offset: 4
-
-    #   body:
-    #     common:
-    #       x_offset: 0
-    #       y_offset: 0
-    #       z_offset: 0
-    #     unity:
-    #       x_offset: 0
-    #       y_offset: 0
-    #       z_offset: 4
 
     # # 19.5:9 ====================================================================================================
     # 19.5_by_9:
-    #   heart:
-    #     common:
-    #       x_offset: 0
-    #       y_offset: -200
-    #       z_offset: 0
-    #     unity:
-    #       x_offset: 0
-    #       y_offset: -1.5
-    #       z_offset: 15
-
-    #   brain:
-    #     common:
-    #       x_offset: 0
-    #       y_offset: -50
-    #       z_offset: 0
-    #     unity:
-    #       x_offset: 0
-    #       y_offset: 1.2
-    #       z_offset: 4
-
-    #   liver:
-    #     common:
-    #       x_offset: -35
-    #       y_offset: -150
-    #       z_offset: 0
-    #     unity:
-    #       x_offset: -0.8
-    #       y_offset: -2
-    #       z_offset: 4
-
-    #   stomach:
-    #     common:
-    #       x_offset: 30
-    #       y_offset: -145
-    #       z_offset: 0
-    #     unity:
-    #       x_offset: 0.85
-    #       y_offset: -2.5
-    #       z_offset: 4
-
-    #   intestine:
-    #     common:
-    #       x_offset: 0
-    #       y_offset: -100
-    #       z_offset: 0
-    #     unity:
-    #       x_offset: 0
-    #       y_offset: -2.8
-    #       z_offset: 4
-
-    #   body:
-    #     common:
-    #       x_offset: 0
-    #       y_offset: 0
-    #       z_offset: 0
-    #     unity:
-    #       x_offset: 0
-    #       y_offset: 0
-    #       z_offset: 4
 
     # # 20:9 ====================================================================================================
     # 20_by_9:
-    #   heart:
-    #     common:
-    #       x_offset: 0
-    #       y_offset: -200
-    #       z_offset: 0
-    #     unity:
-    #       x_offset: 0
-    #       y_offset: -1.5
-    #       z_offset: 15
-
-    #   brain:
-    #     common:
-    #       x_offset: 0
-    #       y_offset: -50
-    #       z_offset: 0
-    #     unity:
-    #       x_offset: 0
-    #       y_offset: 1.2
-    #       z_offset: 4
-
-    #   liver:
-    #     common:
-    #       x_offset: -35
-    #       y_offset: -150
-    #       z_offset: 0
-    #     unity:
-    #       x_offset: -0.8
-    #       y_offset: -2
-    #       z_offset: 4
-
-    #   stomach:
-    #     common:
-    #       x_offset: 30
-    #       y_offset: -145
-    #       z_offset: 0
-    #     unity:
-    #       x_offset: 0.85
-    #       y_offset: -2.5
-    #       z_offset: 4
-
-    #   intestine:
-    #     common:
-    #       x_offset: 0
-    #       y_offset: -100
-    #       z_offset: 0
-    #     unity:
-    #       x_offset: 0
-    #       y_offset: -2.8
-    #       z_offset: 4
-
-    #   body:
-    #     common:
-    #       x_offset: 0
-    #       y_offset: 0
-    #       z_offset: 0
-    #     unity:
-    #       x_offset: 0
-    #       y_offset: 0
-    #       z_offset: 4
 
     # # 21:9 ====================================================================================================
     # 21_by_9:
-    #   heart:
-    #     common:
-    #       x_offset: 0
-    #       y_offset: -200
-    #       z_offset: 0
-    #     unity:
-    #       x_offset: 0
-    #       y_offset: -1.5
-    #       z_offset: 15
-
-    #   brain:
-    #     common:
-    #       x_offset: 0
-    #       y_offset: -50
-    #       z_offset: 0
-    #     unity:
-    #       x_offset: 0
-    #       y_offset: 1.2
-    #       z_offset: 4
-
-    #   liver:
-    #     common:
-    #       x_offset: -35
-    #       y_offset: -150
-    #       z_offset: 0
-    #     unity:
-    #       x_offset: -0.8
-    #       y_offset: -2
-    #       z_offset: 4
-
-    #   stomach:
-    #     common:
-    #       x_offset: 30
-    #       y_offset: -145
-    #       z_offset: 0
-    #     unity:
-    #       x_offset: 0.85
-    #       y_offset: -2.5
-    #       z_offset: 4
-
-    #   intestine:
-    #     common:
-    #       x_offset: 0
-    #       y_offset: -100
-    #       z_offset: 0
-    #     unity:
-    #       x_offset: 0
-    #       y_offset: -2.8
-    #       z_offset: 4
-
-    #   body:
-    #     common:
-    #       x_offset: 0
-    #       y_offset: 0
-    #       z_offset: 0
-    #     unity:
-    #       x_offset: 0
-    #       y_offset: 0
-    #       z_offset: 4
 
     # # 22:9 ====================================================================================================
     # 22_by_9:
-    #   heart:
-    #     common:
-    #       x_offset: 0
-    #       y_offset: -200
-    #       z_offset: 0
-    #     unity:
-    #       x_offset: 0
-    #       y_offset: -1.5
-    #       z_offset: 15
-
-    #   brain:
-    #     common:
-    #       x_offset: 0
-    #       y_offset: -50
-    #       z_offset: 0
-    #     unity:
-    #       x_offset: 0
-    #       y_offset: 1.2
-    #       z_offset: 4
-
-    #   liver:
-    #     common:
-    #       x_offset: -35
-    #       y_offset: -150
-    #       z_offset: 0
-    #     unity:
-    #       x_offset: -0.8
-    #       y_offset: -2
-    #       z_offset: 4
-
-    #   stomach:
-    #     common:
-    #       x_offset: 30
-    #       y_offset: -145
-    #       z_offset: 0
-    #     unity:
-    #       x_offset: 0.85
-    #       y_offset: -2.5
-    #       z_offset: 4
-
-    #   intestine:
-    #     common:
-    #       x_offset: 0
-    #       y_offset: -100
-    #       z_offset: 0
-    #     unity:
-    #       x_offset: 0
-    #       y_offset: -2.8
-    #       z_offset: 4
-
-    #   body:
-    #     common:
-    #       x_offset: 0
-    #       y_offset: 0
-    #       z_offset: 0
-    #     unity:
-    #       x_offset: 0
-    #       y_offset: 0
-    #       z_offset: 4
