--- a/settings/default.settings.yaml
+++ b/settings/default.settings.yaml
@@ -1,13 +1,15 @@
 settings:
   main_runner: "unity" # unity, debug, debug_quizz
-  debug_organ: "kidney" # brain,  heart, lungs, kidney, liver, stomach, intestine, body
+  debug_organ: "brain" # brain,  heart, lungs, kidney, liver, stomach, intestine, body
 
+  image_flip: True # Flip image, since cv2 mirror the image
   adjust_orientation: True # If main runner is unity => True if mobile device used and False when using webcam
   enable_adjustments_settings: False # True or False
-  override_typ_selected: True # Override the selected organ in unity if debug mode on
+  override_type_selected: True # Override the selected organ in unity if debug mode on
 
   err_distance: "error_distance" # send error message to current user if distance in not appropriate
-
+  print_svc_logger: True # false for production
+  
   mp:
     pose:
       static_image_mode: False
@@ -23,7 +25,30 @@ settings:
       min_detection_confidence: 0.5
       min_tracking_confidence: 0.5
 
-  organs: ["brain", "heart", "lungs", "kidney", "liver", "stomach", "intestine"]
+  # organs: ["brain", "heart", "lungs", "kidney", "liver", "stomach", "intestine"]
+  organs_quizz:
+    brain: 
+      both_hand: False
+      which_hand: ["Left", "Right"]
+    heart:
+      both_hand: False
+      which_hand: ["Left", "Right"]
+    lungs:
+      both_hand: True
+      which_hand: ["Left", "Right"]
+    kidney:
+      both_hand: True
+      which_hand: ["Left", "Right"]
+    liver:
+      both_hand: False
+      which_hand: ["Right"]
+    stomach:
+      both_hand: False
+      which_hand: ["Left"]
+    intestine:
+      both_hand: True
+      which_hand: ["Left", "Right"]
+
   pose_landmarks:
     [
       "NOSE",
