--- a/settings/default.settings.yaml
+++ b/settings/default.settings.yaml
@@ -1,5 +1,5 @@
 settings:
-  users_ttl: 90 # user only stay on the connection
+  users_ttl: 5 # user only stay on the connection
 
   main_runner: "unity" # unity, debug, debug_quizz
   debug_organ: "intestine" # brain,  heart, lungs, kidney, liver, stomach, intestine, body
@@ -12,6 +12,7 @@ settings:
   err_distance: "error_distance" # send error message to current user if distance in not appropriate
   print_svc_logger: True # false for production
   
+  cv2_show: False
   mp:
     pose:
       static_image_mode: False
